...
    
    private func commonInit() {
        rightView = currencyButton
        rightViewMode = .always
        currencyButton.addTarget(self, action: #selector(self.currencyButtonTouchUpInside), for: .touchUpInside)
        currencyButton.setTitleColor(.black, for: .normal)
        currencyButton.accessibilityIdentifier = "CurrencyButton"
        delegate = self
    }

    private func updateWithAmount(_ amount: AmountValue?) {
        text = amount.formatAmountValueForDisplay
        currencyButton.setTitle(amount?.currencyCode, for: .normal)
...
